# NCEPLIBS-wrf_io

./: .gitmodules  CMakeLists.txt  LICENSE.md  README  README.md  annotated.html  annotated_dup.js  classes.html  dir_3bdd366c61c312c028aa5c13956d6734.html  dir_49e56c817e5e54854c35e136979f97ca.html  field__routines_8F90_source.html  files.html  files_dup.js  index.html  menudata.js  namespaces.html  namespaces_dup.js  namespacewrf__data.html  namespacewrf__data.js  namespacewrf__data_structwrf__data_1_1wrf__data__handle_dup.js  navtreedata.js  navtreeindex0.js  structwrf__data_1_1wrf__data__handle.html  structwrf__data_1_1wrf__data__handle.js  wrf__io_8F90_source.html
.github/workflows/: Intel.yml  Linux.yml  MacOS.yml  Spack.yml  developer.yml  main.yml
cmake/: PackageConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  user_guide.md
libsrc/: CMakeLists.txt  field_routines.F90  field_routines.f  install  install.sh  make.local.sh  makefile  wrf_io.F90  wrf_io.f
modulefiles/wrfio/: v1.1.1
search/: all_0.js  classes_0.js  namespaces_0.js  searchdata.js
spack/: README
src/: CMakeLists.txt  ext_ncd_get_dom_ti.code  ext_ncd_get_var_td.code  ext_ncd_get_var_ti.code  ext_ncd_put_dom_ti.code  ext_ncd_put_var_td.code  ext_ncd_put_var_ti.code  field_routines.F90  wrf_io.F90.orig  wrf_io.f90
wrf.post.lib/v1.1.1/lib/wrf_io/: ext_ncd_support_routines.mod  make.sh  makefile  wrf_data.mod  wrf_io.f
wrf.post.lib/v1.1.1/src/: make.sh
